force-app/main/default/objects/Pick_Task__c/Pick_Task__c.object-meta.xml
<CustomObject>
    <label>Pick Task</label>
    <nameField>
        <displayFormat>PICK-{00000}</displayFormat>
        <label>Pick Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pick Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>