force-app/main/default/objects/Pick_Task__c/fields/Outbound_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Order Line</label>
    <referenceTo>Outbound_Order_Line__c</referenceTo>
    <relationshipLabel>Pick Tasks</relationshipLabel>
    <relationshipName>Pick_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>