force-app/main/default/objects/Pick_Task__c/fields/Picked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Picked_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Picked Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>