force-app/main/default/objects/Pick_Task__c/fields/Source_Bin__c.field-meta.xml
<CustomField>
    <fullName>Source_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Bin</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Pick Tasks As Source</relationshipLabel>
    <relationshipName>Pick_Tasks_As_Source</relationshipName>
    <type>Lookup</type>
</CustomField>