force-app/main/default/objects/Pick_Task__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Pick Tasks</relationshipLabel>
    <relationshipName>Pick_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>