force-app/main/default/objects/Pick_Task__c/validationRules/Picked_Quantity_Cannot_Exceed_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Picked_Quantity_Cannot_Exceed_Task</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Quantity__c <= 0, Picked_Quantity__c < 0, Picked_Quantity__c > Quantity__c)</errorConditionFormula>
    <errorMessage>Pick quantity must be positive and picked quantity cannot exceed the task quantity.</errorMessage>
</ValidationRule>